# Gruppe177

./: .gitignore  README.md
Ex1/Exercise01/Task 1/: README  hello.c
Ex1/Exercise01/Task 2/: README  pointer.c
Ex1/Exercise01/Task 3/: A3_Bingzhen.c  README  RPG.c  RPG_new.c
Ex1/Exercise01/Task 4/: Queue.c
Ex2/: Ex2.md  Ex2_WY.md  README.md  main.c  main1.c
Ex3/: Ü3.md
Lab1/SPP_OpenMP_practical/Task 1/: daxpy.cpp  run.sh
Lab1/SPP_OpenMP_practical/Task 2/: Makefile  symmMatVecMult.c
Lab1/SPP_OpenMP_practical/Task 3/: quicksort.cpp
Lab2/SPP_MPI_practical/Task1/: Makefile  integral  job.sh  test1.err.24820890  test1.out.24820890
Lab2/SPP_MPI_practical/Task2/: integral  integral.c  job.sh  test1.err.24820868  test1.out.24820868
Lab2/SPP_MPI_practical/Task3/: Makefile  heated-plate  heated-plate-parallel.cpp  job.sh
Lab2/SPP_MPI_practical/Task3_cd/: heated-plate  heated-plate-parallel.cpp
Lab2/SPP_MPI_practical/Task4/mandelbrot_2/: main.c
Lab3/SPP_Cuda_practical/cudatracer/: CMakeLists.txt  batch_job.sh
Lab3/SPP_Cuda_practical/cudatracer/BoundSphere/: BoundSphereCreator.cpp  CMakeLists.txt  Miniball.cpp  Miniball.h  Miniball_b.cpp  Miniball_b.h  PointN.h
Lab3/SPP_Cuda_practical/cudatracer/CUDATracing/: BitmapWriter.cpp  BitmapWriter.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Colorfunctions.cpp  Colorfunctions.h  Constants.h  Direction.cpp  DirectionPoint.h  DirectionPoint.h~RF1982ba3.TMP  Dualray.cpp  Face.cpp  Face.h  Flatpoint.cpp  Flatpoint.h  GA_CPU_Tracer_glut.cpp  GA_CPU_Tracer_glut.h  GA_GPU_Tracer_glut.cpp  GA_GPU_Tracer_glut.h  LA_CPU_Tracer_glut.cpp  LA_CPU_Tracer_glut.h  LA_GPU_Tracer_glut.h  Light.cpp  Light.h  Log.cpp  Log.h  Material.cpp  Material.h  MaterialBuilder.cpp  MaterialBuilder.h  Mesh.cpp  Mesh2.cpp  MeshSphere.h  Plane.cpp  Plane.h  Point.cpp  Pointpair.cpp  (+21 more)
Lab3/SPP_Cuda_practical/cudatracer/CUDATracing/models/: 3bunny1ele.txt  ACow.txt  ASphere.txt  ATeapot.txt  AWFish.txt  CowSphere.txt  Fertican.txt  Venus.txt  fishsphere.txt  geosphere.rtm  pharasphere.txt  teapot.rtm
Lab3/SPP_Cuda_practical/cudatracer/MeshReader/: CMakeLists.txt  MeshFileReader.cpp  MeshFileReader.h  list.cpp  list.h  objLoader.cpp  objLoader.h  obj_parser.cpp  obj_parser.h  rtmLoader.cpp  rtmLoader.h  string_extra.h  string_util.cpp  string_util.h
